<resources>
    <string name="app_name">Vault-y</string>
    <string name="welcome_to_vault_y">Welcome to Vault-y</string>
    <string name="started">Let\'s Get Started.</string>
    <string name="mpin_set_field">Set a 4 digit MPIN</string>
    <string name="begin">Begin</string>
    <string name="welcome_to_your_vault">Welcome to your Vault!</string>
    <string name="securely_encrypting_your_key">Securely encrypting your MPIN.</string>
    <string name="enter_your_4_digit_mpin">Enter your 4 digit MPIN</string>
    <string name="welcome_back">Welcome Back to Vault-y!</string>
    <string name="enter_vault">Enter Vault</string>
    <string name="storing_notice">MPIN is stored in your device itself,\nusing <u>DES encryption</u></string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="clear_mpin">Reset MPIN</string>
    <string name="more_security_options">More Security Options</string>
    <string name="about_app">About Vault-y</string>
    <string name="logout">Logout</string>
    <string name="theme">Theme</string>
    <string name="use_finger">You may also use your fingerprint\nfor one tap login!</string>
    <string name="app_name_extended">Vault-y App</string>
    <string name="version">Version</string>
    <string name="december_2021">December 2021</string>
    <string name="last_update">Last Update</string>
    <string name="made_possible_by">Made Possible By</string>
    <string name="dev_one_name">Spandan Saxena (191B265)</string>
    <string name="dev_name_two">Trirupa Kushwaha (191B276)</string>
    <string name="dev_name_three">Vinayak Shastri (191B284)</string>
    <string name="about_security">Name, MPIN, Mobile Number, key hashes and fingerprint data are stored in a secured encrypted manner using DES Encryption on the device itself, no data is sent anywhere.</string>
    <string name="developed_at"><![CDATA[Developed with ❤️ at\nJaypee University of Engineering & Technology!]]></string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="proceed">Proceed</string>
    <string name="enter_received_otp">Enter received OTP</string>
    <string name="verify">Verify</string>
    <string name="forgot_pin"><u>Forgot pin</u></string>
    <string name="enter_otp">Enter OTP</string>
    <string name="reset">RESET</string>
    <string name="reset_mpin">Reset MPIN</string>
    <string-array name="welcomeTexts">
        <item>Hello.</item>
        <item>Welcome to Vault-y</item>
        <item>Vault-y へようこそ</item>
        <item>वॉल्ट-ई में आपका स्वागत है</item>
        <item>Vault-y에 오신 것을.</item>
        <item>Bienvenue à Vault-y</item>
        <item>欢迎来到 Vault-y</item>
        <item>Bienvenido a Vault-y</item>
    </string-array>
    <string-array name="encryptionHolders">
        <item>Securely encrypting your MPIN.</item>
        <item>Generating Key 1</item>
        <item>Generating Key 2</item>
        <item>Securing META-INF</item>
        <item>Welcome to Vault-y</item>
    </string-array>
</resources>