<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneAuth">

    <!--Edittext for getting users phone number-->

    <TextView
        android:id="@+id/otpHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/productsansbold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/mobile_verification"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneHolder"
        android:layout_below="@+id/otpHolder"
        android:layout_centerHorizontal="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginStart="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/idEdtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/productsans"
            android:hint="@string/enter_your_mobile_number"
            android:inputType="phone"
            android:maxLength="4"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--Button for getting OTP-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/idBtnGetOtp"
        android:layout_width="260dp"
        android:layout_below="@id/phoneHolder"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/productsansbold"
        android:text="@string/proceed"
        android:textColor="@color/white" />


    <!--Edittext for getting otp from user-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otpHandlerHolder"
        android:visibility="invisible"
        android:layout_below="@+id/otpHolder"
        android:layout_centerHorizontal="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginStart="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/idEdtOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/productsans"
            android:hint="@string/enter_received_otp"
            android:inputType="phone"
            android:maxLength="4"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--button for verifying user OTP-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/idBtnVerify"
        android:layout_width="260dp"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otpHandlerHolder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/productsansbold"
        android:text="@string/verify"
        android:textColor="@color/white" />

</RelativeLayout>
