<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context=".ReturnLogIn">


    <TextView
        android:id="@+id/appNameHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/productsansbold"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mpinHolder"
        android:layout_below="@+id/appNameHolder"
        android:layout_centerHorizontal="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginStart="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/userEnteredmpin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/productsans"
            android:hint="@string/enter_your_4_digit_mpin"
            android:maxLength="4"
            android:inputType="numberPassword"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enterVaultAgain"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mpinHolder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/productsansbold"
        android:text="@string/enter_vault"
        android:textColor="@color/white" />

</RelativeLayout>