<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context=".SignUp">
    <com.tomer.fadingtextview.FadingTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/productsansbold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:texts="@array/welcomeTexts"
        app:timeout="3000" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardCover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:backgroundTint="#ECECEC"
        android:layout_below="@+id/textView2"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="rectangle"
        android:thicknessRatio="1.9">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/startedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/started"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/productsans"
                android:layout_marginTop="30dp"
                android:textSize="18sp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameHolder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/startedText"
                android:layout_marginStart="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/vaultyUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/productsans"
                    android:hint="@string/enter_your_name"
                    android:inputType="textPersonName"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mpinHolder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/nameHolder"
                android:layout_marginStart="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/mpin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/productsans"
                    android:hint="@string/mpin_set_field"
                    android:maxLength="4"
                    android:inputType="numberPassword"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pressButton"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/mpinHolder"
                android:elevation="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/begin" />
            <TextView
                android:id="@+id/aboutDES"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storing_notice"
                android:fontFamily="@font/productsans"
                android:textAlignment="center"
                android:layout_below="@+id/pressButton"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:layout_marginTop="20dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:layout_below="@+id/cardCover"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="-40dp"
        android:background="#ECECEC"/>
</RelativeLayout>